--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Crete+Round&family=Inter:wght@300;400;500;600;700&family=Poppins&family=Roboto:wght@700&display=swap');
+
 .container {
   display: flex;
   flex-direction: row;
@@ -19,7 +21,7 @@
 }
 
 h1 {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'poppins-bold', sans-serif !important;
   font-style: normal;
   font-weight: bold;
   font-size: 40px;
@@ -31,7 +33,7 @@ h1 {
 }
 
 p {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'poppins-bold', sans-serif !important;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
@@ -41,7 +43,7 @@ p {
 }
 
 h2 {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'poppins-bold', sans-serif !important;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
