Add font and colors that matches Figma style

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 .logo {
   flex-grow: 1;
-  flex-shrink: 3;
+  flex-shrink: 5;
 }
 
 .content {
@@ -32,11 +32,11 @@ h1 {
   padding-top: 50px;
 }
 
-.p {
+p {
   font-family: 'poppins-bold', sans-serif !important;
   font-style: normal;
   font-weight: normal;
-  font-size: 15px;
+  font-size: 16px;
   line-height: 24px;
   color: #344563;
   flex: none;
@@ -44,29 +44,22 @@ h1 {
   margin: 12px 0;
 }
 
-h2 {
+.connect h2 {
   font-family: 'poppins-bold', sans-serif !important;
   font-style: normal;
-  font-weight: 500;
   font-size: 16px;
-  line-height: 24px;
-  color: #6975e4;
-  flex: none;
-  order: 0;
-  flex-grow: 0;
-  margin: 0 8px;
+  color:#6070FF;
+
 }
 
 .content a {
   text-decoration: none;
   text-transform: uppercase;
 }
-
 .connect a {
   text-decoration: none;
   text-transform: uppercase;
 }
-
 .media {
   display: flex;
   justify-content: start;
@@ -81,8 +74,8 @@ ul.media {
 }
 
 .project-container {
-  display: grid;
-  grid-template-columns: 80%;
+ display: grid;
+  row-gap: 89px;
 }
 
 .project-card {
@@ -117,7 +110,7 @@ ul.media {
 }
 
 .p-title {
-  color: #0d1118;
+  color: #172B4D;;
   font-family: 'poppins-bold', sans-serif !important;
   font-style: normal;
   font-weight: bold;
@@ -172,18 +165,32 @@ ul.media {
 .clickme {
   color: #396df2;
   border-radius: 8px;
-  border-color: hsl(223, 88%, 59%);
+  border-color:#7F8CFF;
   padding: 10px 20px;
   background-color: #fff;
   font-size: 20px;
 }
+.clickme:hover,
+.clickme:active{
+  background-color: #396df2;
+  color: #fff;
+}
 
 .about-me {
   padding-left: 20px;
+
 }
 
 .self {
   font-size: 50px;
+  color: #172B4D;
+  position: static;
+width: 327px;
+height: 101px;
+left: 0px;
+top: 0px;
+
+
 }
 
 .intro-about {
@@ -225,31 +232,58 @@ ul.media {
   display: flex;
   margin-top: 20px;
 }
+.lang h4{
+  position: absolute;
+height: 24px;
+left: 12px;
+right: 78px;
+top: calc(50% - 24px/2);
+font-family: 'poppins-bold', sans-serif !important ;
+font-style: normal;
+font-weight: 500;
+font-size: 20px;
+line-height: 24px;
+color: #000000;
 
-.lang p {
+}
+.lang li {
   margin-left: 20px;
+  margin-top: 18px;
+  list-style: none;
+  color: #253858;
+  font-family: 'poppins-bold', sans-serif !important;
+  font-size: 15px;
+  font-weight: 500;
 }
 
 .fr-skills {
   list-style: none;
-  padding: 0;
+  padding: 0px;
   width: 90%;
+}
+.fr-skills .framework{
+display: flex;
+justify-content: space-between;
+font-family:'poppins-bold', sans-serif !important;
+font-style: normal;
+font-weight: 500;
+font-size: 20px;
+line-height: 24px;
+color: #000000;
+list-style: none;
+padding: 3px;
 }
 
 .right {
   transform: rotate(-45deg);
   -webkit-transform: rotate(-45deg);
-  margin: 20px;
-}
+ }
 
 .arrow {
   border: solid black;
   border-width: 0 3px 3px 0;
   display: inline-block;
   padding: 3px;
+  
 }
 
-.fr-skills li {
-  display: flex;
-  justify-content: space-between;
-}
