Update the form container, positioning and styles

--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 .container {
   display: flex;
   flex-direction: row;
@@ -20,7 +24,7 @@
 }
 
 h1 {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-weight: bold;
   font-size: 40px;
   line-height: 52px;
@@ -31,7 +35,7 @@ h1 {
 }
 
 p {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -43,7 +47,7 @@ p {
 }
 
 .connect p {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-style: normal;
   font-size: 16px;
   color: #6070ff;
@@ -90,7 +94,7 @@ ul.media {
 }
 
 .about {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
@@ -111,7 +115,7 @@ ul.media {
 
 .p-title {
   color: #172b4d;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 32px;
@@ -128,7 +132,7 @@ ul.media {
 }
 
 .work1 {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 600;
   font-size: 13px;
@@ -139,7 +143,7 @@ ul.media {
 .subwork li {
   color: #7a869a;
   font-size: 13px;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-weight: 600;
 }
 
@@ -156,7 +160,7 @@ ul.media {
   background-color: #ebebff;
   border-radius: 10px;
   padding: 10px;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-weight: 500;
   font-size: 12px;
 }
@@ -182,7 +186,7 @@ ul.media {
 }
 
 .self {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 40px;
   color: #172b4d;
   position: static;
@@ -193,7 +197,7 @@ ul.media {
 }
 
 .intro-about {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -237,7 +241,7 @@ ul.media {
   height: 24px;
   left: 12px;
   right: 78px;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
@@ -250,7 +254,7 @@ ul.media {
   margin-top: 18px;
   list-style: none;
   color: #253858;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 15px;
   font-weight: 500;
 }
@@ -264,7 +268,7 @@ ul.media {
 .fr-skills .framework {
   display: flex;
   justify-content: space-between;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
@@ -289,4 +293,22 @@ ul.media {
   display: inline-block;
   padding: 3px;
   color: rgb(32, 32, 32);
+}
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #6070ff;
+  border-top-left-radius: 5em;
+  background-image: url(./images/cont-form.png);
+  background-repeat: no-repeat;
+  background-size: 350px 800px;
+  height: 890px;
+}
+
+.contact-description {
+  align-content: center;
+  text-align: center;
+  padding-top: 90px;
 }
