--- a/style.css
+++ b/style.css
@@ -373,3 +373,33 @@ ul.media {
   width: 90%;
   height: 18px;
 }
+
+form-field input {
+  border-style: none;
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 17px;
+  color: rgb(32, 32, 32);
+  padding: 15px 16px 15px 23px;
+  background: none;
+}
+
+.form-field .email-field {
+  border: 1px solid #cfd8dc;
+  border-radius: 8px;
+  width: 100%;
+  height: 48px;
+  margin: 18px 0;
+  background: #fff;
+}
+
+.form-field .message {
+  background: #fff;
+  color: #b3bac5;
+  border: none;
+  border-radius: 8px;
+  /* width: 100%; */
+  padding: 15px 0 0 23px;
+  height: 170px;
+}
