Fix linters error

--- a/style.css
+++ b/style.css
@@ -305,7 +305,7 @@ ul.media {
   border-top-left-radius: 5em;
   background-image: url(./images/cont-form.png);
   background-repeat: no-repeat;
-  background-size: 350px 80git0px;
+  background-size: 350px 800px;
   height: 890px;
 }
 
