--- a/style.css
+++ b/style.css
@@ -48,10 +48,11 @@ p {
   flex-grow: 0;
   margin: 12px 0;
 }
+
 .connect a {
   text-decoration: none;
   text-transform: uppercase;
-  color:#7F8CFF;
+  color: #7f8cff;
   font-family: "Poppins", sans-serif;
   font-style: normal;
   font-size: 16px;
@@ -60,7 +61,6 @@ p {
 
 .media {
   display: flex;
-  justify-content: start;
   flex-direction: row;
   gap: 1em;
   padding-left: 5px;
@@ -70,8 +70,9 @@ p {
 ul.media {
   list-style: none;
 }
-.nav-menu{
-display: none;
+
+.nav-menu {
+  display: none;
 }
 
 .project-container {
@@ -110,7 +111,7 @@ display: none;
   flex-direction: column;
 }
 
-.p-title{
+.p-title {
   color: #172b4d;
   font-family: "Poppins", sans-serif;
   font-style: normal;
@@ -459,175 +460,199 @@ textarea::placeholder {
   body {
     width: 100%;
     height: auto;
-
   }
-.cantainer{
-  display: flex;
-  flex-direction: row;
-}
 
-.menu {
-  display: none;
-}
+  .cantainer {
+    display: flex;
+    flex-direction: row;
+    margin: 40px;
+  }
 
-.nav-menu {
-  display: flex;
-  list-style: none;
-}
+  .menu {
+    display: none;
+  }
 
-.nav-menu li {
-  padding: 20px;
-  font-family: 'Poppins', sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 15px;
-  line-height: 20px;
-  color: #344563;
+  .nav-menu {
+    display: flex;
+    list-style: none;
+  }
 
-}
+  .nav-menu li {
+    padding: 20px;
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 20px;
+    color: #344563;
+  }
 
-.content {
-  background-image: url("./images/desktop.svg");
-  background-size: 100vw;
-  background-repeat: no-repeat;
-  margin-left: 80px;
+  .logo {
+    padding: 20px;
+  }
 
-}
+  .content {
+    background-image: url("./images/desktop.svg");
+    background-size: 100vw;
+    background-repeat: no-repeat;
+    margin-left: 80px;
+    padding: 60px;
+  }
 
- h1{
-  font-family: 'Poppins'sans-serif;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 48px;
-  line-height: 60px;
-  color: #091e42;
-  width: 920px;
-  height: 122px;
-}
+  h1 {
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 48px;
+    line-height: 60px;
+    color: #091e42;
+    width: 920px;
+    height: 122px;
+    flex: 1;
+  }
 
- p{
-  font-family: 'Poppins', sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 28px;
-   width: 920px;
-   height: 122px;
-   padding-top:40px;
-   
- 
- /*end of the header*/
-}
-.project-container{
-height: 496px;
-width: 1156px;
-border-radius: 24px;
-margin-left:50px;
+  p {
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 28px;
+    width: 920px;
+    height: 122px;
+    flex: 1;
 
-}
-.project-card{
-  display: flex;
-  grid-template-areas: "auto auto";
-  flex-direction:row;
-  grid-gap: 50px;
-}
-.background{
-  display: flex;
-  flex-direction:column;
-  width:50%;
-}
-.image{
-  width:50%;
-}
-.p-title{
-font-family: 'Poppins',sans-serif;
-font-style: normal;
-font-weight: bold;
-font-size: 40px;
-line-height: 52px;
-color: #091E42;
-margin-top: 50px;
-}
 
-.about{
-font-style: normal;
-font-weight: normal;
-font-size: 16px;
-line-height: 24px;
-color: #344563;
-width: 496px;
-height: 50px;
-left: 24px;
-top: 146px;
-}
-.work1{
-  font-family: 'Poppins',sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 24px;
-  color:#344563;;
-}
-.languages{
-  padding-top: 40px;
-}
-.clickme{
-  margin-top:40px;
-}
-.row-rev{
-  display: flex;
-  flex-direction: row-reverse ;
-}
- .my-intro{
-  display: flex;
-  grid-template-areas:"auto auto";
-  flex-direction:row;
-  gap: 3em;
-  margin-left: 50px;
-  margin-right: 90px;
-}
-.intro-about{
- width: 50%;
-}
-.about-languages {
-  display: flex;
-  flex-direction: column;
-  width: 50%;
-  flex-grow: 1;
-}
-.contact-form{
-  background-image: url("./images/desk-form-bg.svg");
-  background-size: 100vw;
-}
-.contact-description{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
+    /* end of the header */
+  }
 
-.contact-description p{
-  text-align: center;
-  width: 569px;
-  height: 102px;
-  left: 116px;
-  top: 68px;
-  font-family: 'Poppins',sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 28px;
-  text-align: center;
-  color: #EBEBFF;
-  margin: 12px 0px;
-}
-.form-field{
-  width :447px;
-  height:48px;
-  border-radius:2px;
-  align-self: center;
-  flex-grow: 1;
-}
-.btn{
-  align-self: center;
-}
+  .project-container {
+    height: 496px;
+    width: 1156px;
+  }
+
+  .project-card {
+    display: flex;
+    grid-template-areas: "auto auto";
+    flex-direction: row;
+    grid-gap: 50px;
+    margin-left: 80px;
+  }
+
+  .background {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+  }
+
+  .image {
+    width: 50%;
+  }
+
+  .p-title {
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 40px;
+    line-height: 52px;
+    color: #091e42;
+    margin-top: 50px;
+  }
+
+  .about {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 24px;
+    color: #344563;
+    width: 496px;
+    height: 50px;
+    left: 24px;
+    top: 146px;
+  }
+
+  .work1 {
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 24px;
+    color: #344563;
+  }
+
+  .languages {
+    padding-top: 40px;
+  }
+
+  .row-rev {
+    display: flex;
+    flex-direction: row-reverse;
+  }
+
+  .my-intro {
+    display: flex;
+    grid-template-areas: "auto auto";
+    flex-direction: row;
+    gap: 3em;
+    margin-left: 80px;
+    margin-right: 90px;
+  }
+
+  .intro-about {
+    width: 50%;
+  }
+
+  .about-me {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+  }
+
+  .about-languages {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    flex-grow: 1;
+  }
+
+  .contact-form {
+    background-image: url("./images/contact-from.svg");
+    background-size: 100vw;
+    background-repeat: no-repeat;
+    color: #6070ff;
+  }
+
+  .clickme {
+    margin-bottom: 50px;
+    margin-top: 40px;
+  }
+
+  .contact-description h2 {
+    padding-bottom: 30px;
+  }
+
+  .contact-description p {
+    text-align: center;
+    width: 569px;
+    height: 102px;
+    left: 116px;
+    top: 68px;
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 28px;
+    color: #ebebff;
+  }
+
+  .form-field {
+    width: 447px;
+    height: 48px;
+    align-self: center;
+    flex-grow: 1;
+    padding-bottom: 20px;
+  }
+
+  .btn {
+    align-self: center;
+  }
 }
